Mouse cursor gets stuck in "grab hand" mode
Categories
(Core :: CSS Parsing and Computation, defect)
Tracking
()
People
(Reporter: FeBe95, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
|
7.68 MB,
video/mp4
|
Details | |
|
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
RyanVM
:
approval-mozilla-esr91+
|
Details | Review |
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:90.0) Gecko/20100101 Firefox/90.0
Steps to reproduce:
- make sure bookmarks toolbar is visible
- open https://pingpongmap.net/
- move the cursor between the page and the tab bar (only on the right side?)
Actual results:
- sometimes the cursor gets stuck in "grab hand" mode
- cursor flickers when moving over the tab bar
-> see attached clip: with bookmarks toolbar (0:00 - 0:11) and without bookmarks toolbar (0:12- 0:20)
Expected results:
- cursor goes back to default mode
| Reporter | ||
Comment 1•4 years ago
|
||
| Reporter | ||
Comment 2•4 years ago
|
||
Initial video upload didn't work because of file size, I uploaded a shorter video so the timestamps are now:
- With bookmarks toolbar (0:00 - 0:03)
- Without bookmarks toolbar (0:04- 0:07)
Comment 3•4 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Firefox::Toolbars and Customization' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.
Comment 4•4 years ago
|
||
Hi,
Thank you for taking the time to submit this bug report. I was able to reproduce on Windows 10 pro on the following versions latest Nightly 92.0a1, Firefox 91 beta 9, Firefox 90.0.2
It doesn't seem to be a regression, I checked nightly 90.0a1 (2021-05-03) (64-bit) and bug is also there. But it's not reproducible on other browsers such as chrome.
I've assigned a component in order to get the dev team involved, but if it's not relevant, please feel free to change it to an appropriate one.
Best regards,
Clara
Updated•4 years ago
|
Comment 5•4 years ago
|
||
Actually, just got a regression range:
Last good build 2021-04-19
First bad build 2021-04-20
https://pingpongmap.net/
Best,
Clara
Updated•4 years ago
|
Updated•4 years ago
|
Comment 6•4 years ago
|
||
Looking at that regression range, bug 1705877 is probably the best contender for a regressor, so tentatively setting that.
Going to move this bug into the component where bug 1705877 is.
| Assignee | ||
Comment 7•4 years ago
|
||
Clara, do you happen to know if this repros in non-Windows platforms? (I just tried on Linux and couldn't, but maybe I didn't try hard enough).
Thanks!
Updated•4 years ago
|
Comment 8•4 years ago
|
||
HI Emilio,
Tried reproducing on Ubuntu and I couldn't, so it seems it's specific to Windows.
Thanks!
| Assignee | ||
Updated•4 years ago
|
Updated•4 years ago
|
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Comment 9•4 years ago
|
||
This is simpler and more correct, the previous code could get sHCursor and
sCurrentCursor out of sync, which caused this issue.
Updated•4 years ago
|
Comment 10•4 years ago
|
||
Comment 11•4 years ago
|
||
| bugherder | ||
Comment 12•4 years ago
|
||
Please nominate this for Beta & ESR91 approval when you get a chance.
| Assignee | ||
Comment 13•4 years ago
|
||
Comment on attachment 9236833 [details]
Bug 1724120 - Tweak Windows' nsWindow::SetCursor. r=mstange,cmartin,mhowell
ESR Uplift Approval Request
- If this is not a sec:{high,crit} bug, please state case for ESR consideration: UI glitch
- User impact if declined: comment 0
- Fix Landed on Version: 93
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Relatively simple fix to make the code more provably correct.
- String or UUID changes made by this patch: none
Beta/Release Uplift Approval Request
- User impact if declined: UI glitch
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: comment 0
- List of other uplifts needed: none
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): See above.
- String changes made/needed: none
| Assignee | ||
Updated•4 years ago
|
Comment 14•4 years ago
|
||
Comment on attachment 9236833 [details]
Bug 1724120 - Tweak Windows' nsWindow::SetCursor. r=mstange,cmartin,mhowell
Approved for 92.0b7 and 91.1esr.
Comment 15•4 years ago
|
||
| bugherder uplift | ||
Comment 16•4 years ago
|
||
| bugherder uplift | ||
Comment 17•4 years ago
|
||
Hi,
Entered https://pingpongmap.net/ and this issue is no longer reproducible. Tested using beta 92.0b7 (64-bit), nightly 93.0a1 (2021-08-23) (64-bit) and 91.1.0esr (32-bit)
Updating flags accordingly.
Best,
Clara
Updated•4 years ago
|
Updated•4 years ago
|
Description
•