Bug 1724120 - Tweak Windows' nsWindow::SetCursor. r=mhowell

This is simpler and more correct, the previous code could get sHCursor and
sCurrentCursor out of sync, which caused this issue.

Differential Revision: https://phabricator.services.mozilla.com/D122966